# scada-i-umhack26

./: (DEEP NaN) UMHackathon 2026 (1).docx  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pytest.ini
agents/: api.py  evaluate.py  mqtt.py  pyproject.toml  requirements.txt  state.py  test_regression.py
agents/archive/: testingGLMFormat.py
agents/booking_agent/: booking_agent.py  evaluate_agent.py  prompts.py  toolkit.py
agents/booking_agent/tools/: CheckEquipmentAvailability.py  CheckRoomAvailability.py  CreateBookingRecord.py  GetDepartmentDirectory.py  GetRoomDirectory.py  GetRoomUuid.py  GetUserBookings.py  TimeTools.py  UpdateBookingDetails.py  UpdateBookingStatus.py
agents/esg_agent/: esg_agent.py  evaluate_agent.py  pdf_ingestion.py  prompts.py  toolkit.py
agents/esg_agent/tools/: AnalyzeHvacCompliance.py  AnalyzeSpaceUtilization.py  CalculateCarbonOffsetCost.py  FetchEnergyData.py  GenerateEsgReport.py  PolicyRetriever.py
agents/hvac_agent/: .gitignore  README.md  config.py  hvac_agent.py  hvac_prompts.py  hvac_toolkit.py  main.py  test_hvac_agent_pytest.py
agents/hvac_agent/agents/: hvac_toolkit.py
agents/hvac_agent/core/: adapters.py  controller.py  schemas.py  service.py  tools.py
agents/hvac_agent/demo/: demo_system_triggers.py
agents/hvac_agent/infra/: device_simulator.py  mqtt_replay.py  postgres_client.py  room_simulation.py  scheduler.py  sensor_ingestor.py
agents/hvac_agent/tests/: local_precooling_smoke_test.py  test_controller.py  test_hvac.py  test_hvac_agent.py  test_ilmu_behaviour.py  test_optimizer_integration.py  test_pre_cooling.py  (+5 more)
agents/orchestrator/: agent_evaluation.py  app_interface.py  prompts.py  supervisor.py
(+125 files in other folders)
